# BEMM-GEN

./: .gitignore  LICENSE  MANIFEST.in  README.md  convert.py  implementation.md  main.py  make_param.py  makeparam_all.sh  model.py  protein.py  pyproject.toml  tutorial_en.md  tutorial_ja.md  utils.py  version_history.md
.github/workflows/: python-publish.yml
FF_PARAM/FF_GUA/: GUA.lib  GUA_partialChgs.mol2
bemm_gen/: __init__.py  convert.py  model.py  protein.py  utils.py
bemm_gen/share/FF_PARAM/FF_AMO/: AMO.lib  AMO_partialChgs.mol2  leap.in  smiles.txt
bemm_gen/share/FF_PARAM/FF_ARM/: ARM_psi4.mol2
bemm_gen/share/FF_PARAM/FF_ARO/: ARO.lib  ARO_orig.mol2  ARO_partialChgs.mol2  description.txt  smiles.txt
bemm_gen/share/FF_PARAM/FF_BLA/: description.txt  leap.in
bemm_gen/share/FF_PARAM/FF_CBO/: CBO_orig_round.mol2
bemm_gen/share/FF_PARAM/FF_CBX/: CBX_orig.mol2
bemm_gen/share/FF_PARAM/FF_ETY/: ETY.lib  ETY_orig.mol2  ETY_psi4.mol2  description.txt
bemm_gen/share/FF_PARAM/FF_GUA/: GUA_orig.mol2  GUA_psi4.mol2  smiles.txt
bemm_gen/share/FF_PARAM/FF_HYD/: HYD.lib  HYD_orig_round.mol2
bemm_gen/share/FF_PARAM/FF_MTI/: MTI.lib  MTI_orig.mol2  MTI_partialChgs.mol2  leap.in
bemm_gen/share/FF_PARAM/FF_MTO/: MTO_orig.mol2  MTO_partialChgs.mol2  description.txt  leap.in  smiles.txt
bemm_gen/share/FF_PARAM/FF_MTY/: MTY_psi4.mol2  description.txt  leap.in
bemm_gen/share/FF_PARAM/FF_NEG/: NEG_partialChgs.mol2  NEG_psi4.mol2
bemm_gen/share/FF_PARAM/FF_POS/: POS.lib  (+1 more)
cemm_gen/: __init__.py  convert.py  make_param.py  model.py  protein.py  utils.py
(+97 files in other folders)
