[project]
name = "cemm-gen"
version = "0.0.0"
authors = [{ name="Takunori Yasuda", email="yasuda.takunori.tkb_gb@u.tsukuba.ac.jp"}, { name="Rikuri Morita", email="mriky.25@gmail.com"}]
description = "Cellular Environment Mimicking Model GENerator"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
keywords = ["bioinfomatic", "molecular dynamics", "biology", "chemoinformatics"]

dependencies = [
  "scikit-learn",
  "rdkit",
  "parmed"
]

[project.optional-dependencies]

[tool.setuptools]
packages = ["cemm_gen"]

[tool.setuptools.package-data]
"cemm_gen" = ["share/*"]

[project.scripts]
cemm-gen = "cemm_gen:main"

[project.urls]
"Homepage" = "https://github.com/y4suda/CEMM-GEN"
"Repository" = "https://github.com/y4suda/CEMM-GEN"
"Issues" = "https://github.com/y4suda/CEMM-GEN/issues"
